--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@ body{
 .nav-colorback{
     background-color:rgb(167, 111, 216);
    }
-   
+   .navbar-expand-lg{
+    display: flex;
+    position: sticky;
+   }
+
    .nav-align{
     display: flex;
     justify-content: center;
@@ -213,7 +217,7 @@ body{
     background-color:rgb(55, 31, 120);
     color:  rgb(163, 156, 156);;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 150%;
     display: flex;
     align-items: start;
     justify-content: space-between;
@@ -229,9 +233,9 @@ body{
     float: left;
 } 
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1136px){
     .colorarti{
-        font-size: 20px;
+        font-size: 10px;
         line-height: 1;
         display: flex;
         flex-direction: column;
@@ -252,6 +256,16 @@ body{
     float: left;
 }
 
+
+@media only screen and (max-width: 1136px){
+    .colorarti-parrafo-about{
+        font-size: 20px;
+        line-height: 1;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .fotoarti{
     width: 150%;
     z-index: 1;
@@ -261,11 +275,11 @@ body{
     border-radius: 100%;
     display: flex;
     justify-content: end;
-    float: right;
+
     
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1136px){
     .fotoarti{
       width: 30vh;
       height: 30vh;
@@ -273,7 +287,7 @@ body{
       display: flex;
       flex-direction: column;
       border-radius: 5%;
-      margin-left: 20%;
+      margin-left: 10%;
     }
 }
 
@@ -283,18 +297,18 @@ body{
     margin-right: 1%;
     border-radius: 100%;
     display: flex;
+    z-index: 1;
+    height: 140%;
     justify-content: end;
 
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1136px){
     .fotoarti2{
       width: 30vh;
       height: 30vh;
       border-radius: 5%;
-      margin-left: 30%;
-      display: flex;
-      flex-direction: column;
+      margin-left: 15%;
     }
 }
 
@@ -302,60 +316,61 @@ body{
 .parrafoabout{
     color: darkgrey;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 5%;
-    margin-left: 1%;
-    padding-top: 5%;
+    margin-left: 20%;
     font-size: 0.8cm;
     line-height: 1.5;
+    transform: translateY(-300%);
+    display: flex;
+    float: left;
+    z-index: 1
     
 }
 
 .media-section-about{
-    display: inline-block;
-    display: flex;
     margin-bottom: 10%;
     padding-top: 5%;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1136px){
     .media-section-about{
-        display: flex;
-        flex-direction: column-reverse;
+        padding-top: 10%;
+        display: inline-block;
     }
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1136px){
     .parrafoabout{
         font-size: 20px;
         line-height: 1;
-        display: flex;
-        flex-direction: column;
+        transform: translateY(30%);
+        margin-left: 1%;
     }
 }
 
 
-/* FOOTER */
-.homeboton{
+ /* FOOTER */
+/* .homeboton{
     width: 100px;
     height: 100px;
     padding-top: 75px;
-}
+} */
 /* SCROLL BUTTON */
-.scrollboton{
-    width: 100px;
-    height: 90px;
-    padding-top: 100px;
-    margin-left: 10px;
-    margin-bottom: 30px;
+ /* .scrollboton{
+    width: 50%;
+    height: 50%;
+    padding-top: 1%;
+    margin-left: 1%;
+    margin-bottom: 1%;
 }
 .homeboton1{
     display: flex;
-    justify-content: space-between;
-    margin-right: 40px;
-    margin-bottom: 60px;
-}
+    justify-content: left;
+}  */
 
 /* TERMINOS Y CONDICIONES */
+
+/* navbar */
+
 #bodytos{
     background-image: url(../PreEntrega1-Ramirez-Gonzalez/multimedia/T.O.S/fondotos.jpeg);
 }
@@ -363,28 +378,34 @@ body{
 .colortitle{
     color: white;
     display: flex;
-    transform: translateY(50px);
-    margin-left: 20px;
-    margin-bottom: 10px;
+    transform: translateY(90%);
+    margin-left: 2%;
+    margin-bottom: 3%;
     background-color: transparent darkgray;
     line-height: 100%;
     font-weight: bold;
-    font-size: 100px;
+    font-size: 600%;
     color: black;
     text-shadow: 1px 0 0 white, -1px 0 0 white, 0 1px 0 white, 0 -1px 0 white;}
 
-
-.tos1{ 
-    width: 900px;
-    margin-left: 1000px;
-    display: flex;}
-
+    @media only screen and (max-width: 600px){
+        .colortitle{
+            font-size: 250%;
+        }
+    }
+.tos1{
+    border: solid 100px 0 0 white, -1px 0 0 white, 0 1px 0 white, 0 -1px 0 white;
+    color: white;
+    color: black;
+    background-color: transparent darkgray;
+    
+}
 /* INICIO DE MAIN */
 .imgtos{
-    margin-left: 50px;
-    padding-top: 100px;
-    width: 80px;
-    height: 80px;
+    margin-left: 3%;
+    padding-top: 7%;
+    width: 5%;
+    height: 5%;
     display: flex;
     
 
@@ -392,30 +413,46 @@ body{
 #parrafotos{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     z-index: 1;
-    margin-left: 200px;
+    margin-left: 10%;
     line-height: 2;
     display: flex;
     transform: translateY(-50px);
     line-height: 100%;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 200%;
     color: black;
     text-shadow: 1px 0 0 white, -1px 0 0 white, 0 1px 0 white, 0 -1px 0 white;
 
 }
+
+@media only screen and (max-width: 1136px){
+    #parrafotos{
+        font-size: 100%;
+        transform: translateY(-35px);
+    }
+}
+
 #parrafotoscala{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     z-index: 1;
-    margin-left: 200px;
+    margin-left: 10%;
     line-height: 2;
     display: flex;
     transform: translateY(-50px);
     line-height: 100%;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 200%;
     color: black;
     text-shadow: 1px 0 0 white, -1px 0 0 white, 0 1px 0 white, 0 -1px 0 white;
     text-decoration: line-through;
+}
+
+@media only screen and (max-width: 1136px){
+    #parrafotoscala{
+        font-size: 100%;
+        transform: translateY(-35px);
+        margin-left: 10%;
+    }
 }
 
 /* FOOTER ES EL MISMO QUE EN TODAS */
@@ -434,22 +471,19 @@ body{
 .titucontact{
     color: rgb(44, 0, 92);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 80px ;
-    margin-left: 250px;
-    transform: translateY(50px);
+    font-size: 500% ;
+    margin-left: 10%;
+    display: flex;
+    display: inline-block;
 
 }
 
-.con1{
-    width: 250px;
-    margin-right: 1000px;
-    display: flex;
-}
-
-.con2{
-    width: 1500px;
-    margin-left: 600px;
-    display: flex;
+@media only screen and (max-width: 1136px){
+      .titucontact{
+        display: flex;
+        justify-content: center;
+      }
+    
 }
 
 /* FIN DE HEADER Y COMIENZO MAIN */
@@ -458,18 +492,27 @@ body{
 
 .navcontmain{
     display: flex;
-    justify-content: center;
-    padding-top: 40px;
+    justify-content: center; 
+    padding-top: 5%;
 
+}
+
+@media only screen and (max-width: 1136px){
+    .navcontmain{
+      display: flex;
+      justify-content: center;
+      margin-right: 5%;
+    }
+  
 }
 
 .nopoint{
     list-style-type: none;
 }
 .navcont{
-    padding-bottom: 100px;
-    width: 50px;
-    height: 50px;
+    padding: 90%;
+    width: 300%;
+    height: 300%;
 }
 /* FIN DE MAIN */
 /* FOOTER SIMPLE, SOLO HOME */
@@ -504,7 +547,7 @@ body{
    width: 50%;
    transform: translateY(100%);
 }
-@media only screen and (max-width:431px) {
+@media only screen and (max-width:1136px) {
     .subsection1{
         color: rgb(148, 104, 159);
         display: flex;
@@ -529,7 +572,7 @@ margin-left: 70%;
     transform: scale(1.5);
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .subfotos{
         display: flex;
         width: 30%;
@@ -547,7 +590,7 @@ margin-left: 70%;
     border-radius: 80%;
     margin-left: 45%;
 }
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .homeprecios{
         color: gray;
         font-size: 1cm;
@@ -568,7 +611,7 @@ margin-left: 70%;
     margin-left: 30%;
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     #secp1{
         background-color: rgb(148, 104, 159);
         max-width: 60%;
@@ -600,7 +643,7 @@ margin-left: 70%;
 
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .subsection2{
         width: 50%;
         height: 50%;
@@ -623,7 +666,7 @@ margin-left: 70%;
 }
 
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .backtohome1{
         padding-top: 7%;
         font-size: 0.8cm;
@@ -640,7 +683,7 @@ margin-left: 70%;
     margin-left: 30%;
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     #secp2{
         background-color: rgb(148, 104, 159);
         max-width: 60%;
@@ -669,7 +712,7 @@ margin-left: 70%;
     font-size: 1cm;
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .subsection3{
         width: 50%;
         height: 50%;
@@ -691,7 +734,7 @@ margin-left: 70%;
     font-size: 1cm;
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .backtohome2{
         padding-top: 7%;
         font-size: 0.8cm;
@@ -707,7 +750,7 @@ margin-left: 70%;
     margin-left: 30%;
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     #secp3{
         background-color: rgb(148, 104, 159);
         max-width: 60%;
@@ -736,7 +779,7 @@ margin-left: 70%;
     font-size: 1cm; 
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .subsection4{
         width: 50%;
         height: 50%;
@@ -758,7 +801,7 @@ margin-left: 70%;
     font-size: 1cm;
 }
 
-@media only screen and (max-width:433px) {
+@media only screen and (max-width:1136px) {
     .backtohome3{
         padding-top: 7%;
         font-size: 0.8cm;
@@ -823,7 +866,7 @@ margin-left: 70%;
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
-@media screen and (max-width:800px){
+@media screen and (max-width:1136px){
     .pie-pagina .grupo-1{
         width: 90%;
         grid-template-columns: repeat(1, 1fr);
