--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ body{
 
 /* ABOUT ME */
 .bodyabout{
-    background-image: url(/multimedia/img-aboutme/fondoabout.jpeg);
+    background-image: url(./multimedia/img-aboutme/fondoabout.jpeg);
 }
 /* HEADER */
 
